# words-wktr

./: .env  Cargo.toml  good.json  parse_dictionary.json  retrieve_json_models.py  ring.json  s  word.json
has_fields/has_fields/: Cargo.toml
has_fields/has_fields/src/: lib.rs
migrations/2023-11-23-011736_create_wiki_tables/: up.sql
migrations/2023-11-23-180644_fix_nullable_tables/: up.sql
migrations/2023-11-29-012934_create_tables/: up.sql
src/: api.rs  main.rs  schema.rs
src/data/: dictionary_repository.rs  mod.rs  models.rs  mongo_dictionary_repository.rs  new_dictionary_repository.rs
src/data/db/: links.rs  mod.rs  models.rs
src/domain/: import_dictionary.rs  import_words.rs  mod.rs  models.rs
src/mongodb/: mod.rs
