[package]
name = "words-wktr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
async-trait = "0.1.74"
futures = {version = "0.3.29"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "net"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] } # обновлено
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12.0"
serde_json = "1.0"
dotenv = "0.15"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.10.2"


has_fields = { path = "./has_fields/has_fields"}
rand = "0.8.5"

[dev-dependencies]
diesel_cli = { version = "2.1.1", features = ["postgres"] }
