[package]
name = "words-wktr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.74"
futures = {version = "0.3.29"}
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bson = "2.8.1"
mongodb = "2.1"

mime = "0.3.17"
rand = "0.8.5"